# Practics

./: CMakeLists.txt  dynamicArray1.cpp  dynamic_array.cpp  dynamic_array1.cpp
Array/: Array  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  a.out  cmake_install.cmake  compile_commands.json  dynamicArray.cpp  dynamicArray.h  test.cpp
Array/.cmake/api/v1/reply/: cache-v2-63cf6451ce538778dfb0.json  codemodel-v2-7d2a3ca2b2f3f4d755b0.json  index-2022-02-21T10-54-47-0583.json  target-Array-Debug-4fc1d14abd9e185ed832.json  target-Continuous-Debug-8a456020bd3d70bfbf74.json  target-ContinuousBuild-Debug-5c01f3342503835161f4.json  target-ContinuousConfigure-Debug-e3f93d8cd61505a2f147.json  target-ContinuousCoverage-Debug-93e9a851d7934512c66a.json  target-ContinuousMemCheck-Debug-4ed151f1fc7391ae22bf.json  target-ContinuousStart-Debug-9617116aa01010fc7305.json  target-ContinuousSubmit-Debug-83ae43979ffbb40533b5.json  target-ContinuousTest-Debug-8cdf16234e0027733eac.json  target-ContinuousUpdate-Debug-255398a1eb0fb0478a4d.json  target-Experimental-Debug-4166827624f7ece33029.json  target-ExperimentalBuild-Debug-744c4d96646326ccedb9.json  target-ExperimentalConfigure-Debug-2b6f522d35b05f4363b8.json  target-ExperimentalCoverage-Debug-8be5dc73f30940bf9014.json  target-ExperimentalMemCheck-Debug-35f5562adbabc543c1eb.json  target-ExperimentalStart-Debug-0ab5bbbeeae4439717c0.json  target-ExperimentalSubmit-Debug-94bdb1e13431792b0348.json  target-ExperimentalTest-Debug-c643071b807dfb4ac296.json  (+11 more)
